--- a/src/variable.scss
+++ b/src/variable.scss
@@ -2,6 +2,7 @@ $container: 1280px;
 $padding-container: 30px;
 
 $brand: #498783;
+$light-brand: #A4C3C1;
 $secondary: #fff;
 $button-bg-blue: #0027b1;
 
