--- a/src/App.scss
+++ b/src/App.scss
@@ -40,22 +40,13 @@ a {
     position: relative;
     transition: all 300ms ease 0ms;
     z-index: 3;
-    &::after {
-        content: "";
-        position: absolute;
-        bottom: -5px;
-        left: 0px;
-        width: 100%;
-        height: 10px;
-        background: rgba(73, 135, 131, 0.3);
-        z-index: 2;
-        transition: all 300ms ease 0ms;
-    }
+    color: #fff;
+    background: $brand;
+    padding: 10px 30px;
+    border-radius: 90px;
 
     &:hover {
-        &::after {
-            height: calc(100% + 5px);
-        }
+        background: #2c514f;
     }
 }
 
@@ -67,26 +58,13 @@ section.bg {
         color: #fff;
     }
     .link-bg {
-        display: block;
-        position: relative;
-        transition: all 300ms ease 0ms;
-        z-index: 3;
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: -5px;
-            left: 0px;
-            width: 100%;
-            height: 10px;
-            background: rgba(200, 218, 217, 0.5);
-            z-index: 2;
-            transition: all 300ms ease 0ms;
-        }
+        background: #fff;
+        color: $brand;
+        border: 2px solid transparent;
 
         &:hover {
-            &::after {
-                height: calc(100% + 5px);
-            }
+            border: 2px solid #2c514f;
+            color: #2c514f;
         }
     }
 }
