--- a/src/components/Index/Intro/Intro.scss
+++ b/src/components/Index/Intro/Intro.scss
@@ -36,13 +36,14 @@
         gap: 10px;
         z-index: 2;
         background: #fff;
-        padding: 13px;
-        max-width: 400px;
+        padding: 13px 22px;
+        max-width: 480px;
         bottom: 60px;
         right: 0px;
         top: auto;
         left: auto;
         align-items: center;
+        border-radius: 20px;
 
         & p {
             color: #498783;
