--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -1,24 +1,31 @@
 .user {
     color: #498783;
     & h1 {
-        font-size: 36px;
-        font-weight: 800;
+        font-size: 28px;
+        font-weight: 700;
         line-height: 33px;
-        margin: 0px 0px 50px;
+        margin: 0px 0px 5px;
     }
     &__row {
         display: flex;
-        gap: 20px;
+        gap: 5px;
         justify-content: space-between;
         align-items: center;
+        max-width: 850px;
+        margin: 0 auto;
+        background: #fff;
+        padding: 35px;
+        border-radius: 20px;
+        filter: drop-shadow(0px 5px 15px rgba(0, 0, 0, 0.25));
     }
 
     &__img {
         position: relative;
-        width: 270px;
-        height: 270px;
+        width: 165px;
+        height: 165px;
         overflow: hidden;
         border-radius: 50%;
+        order: 2;
 
         & img {
             position: absolute;
@@ -34,11 +41,19 @@
         flex-direction: column;
         gap: 14px;
         flex: 0 1 600px;
+        & p {
+            flex: 0 0 224px;
+            margin: 0px 20px 0px 0px;
+        }
+        & p.hidden {
+            flex: 1 1 auto;
+        }
+        & p.no-flex {
+            flex: none;
+            margin: 0px;
+        }
 
         &.edit {
-            & p {
-                flex: 1 1 auto;
-            }
             & p.hidden {
                 display: none;
             }
@@ -69,12 +84,18 @@
             display: none;
         }
     }
+
+    &__header {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
     &__characteristic {
         display: flex;
         gap: 6px;
 
         & p {
-            font-size: 20px;
+            font-size: 18px;
             line-height: 31px;
         }
         & p:first-child {
@@ -83,26 +104,32 @@
         & input {
             display: none;
         }
+
+        &.column {
+            flex-direction: column;
+
+            & .flex {
+                display: flex;
+                padding: 0px 0px 0px 21px;
+
+                & p {
+                    flex: 0 0 calc(224px - 15px);
+                }
+            }
+        }
     }
 
     &__btn {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 250px;
         height: 40px;
         border-radius: 90px;
-        border: 2px solid #498783;
         background: #fff;
         color: #498783;
         text-align: center;
         padding: 9px 0px;
         transition: all 300ms ease-in;
         font-size: 18px;
-
-        &:hover {
-            background: #498783;
-            color: #fff;
-        }
     }
 }
