--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -235,4 +235,12 @@
             transition: all 300ms ease-in;
         }
     }
+    ::-webkit-input-placeholder {
+        color: #A4C3C1;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 23px;
+        margin-right: 53px;
+    }
 }
