--- a/src/components/Research/Researches/Research/AddReseach/AddReseach.scss
+++ b/src/components/Research/Researches/Research/AddReseach/AddReseach.scss
@@ -152,6 +152,14 @@
             
         }
     }
+    ::-webkit-input-placeholder {
+        color: #A4C3C1;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 23px;
+        margin-right: 53px;
+    }
 }
 
 .stages {
