--- a/src/components/Research/Researches/Research/Research.scss
+++ b/src/components/Research/Researches/Research/Research.scss
@@ -53,6 +53,8 @@
         line-height: 23px;
         margin: 0px 0px 3px;
     }
+
+    
     &__max-count {
         color: #95b5b3;
         font-size: 14px;
@@ -163,6 +165,20 @@
         &:last-child {
             flex: 1 1 auto;
         }
+
+            &__items {
+                display: flex;
+                flex-direction: row;
+
+                & p {
+                    border-radius: 90px;
+border: 3px solid #498783;
+background: #FFF;
+padding: 13px;
+margin-right: 10px;
+                }
+            }
+    
     }
     &__btn {
         display: flex;
