Add authorization with localStorage

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -80,6 +80,9 @@
         font-weight: 600;
         line-height: 28px; /* 140% */
         margin-top: 13px;
+        align-items: center;
+        text-align: center;
+        /* padding-top: 10px; */
 
         &:hover {
             background: #498783;
