--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,64 +1,49 @@
 .footer {
-
-
-    background: #498783;
-    ;
     box-shadow: 0px 4px 15px 4px rgba(0, 0, 0, 0.25);
-    height: 190px;
-
-    & .container {
-        color: #FFF;
-        display: flex;
-        flex-direction: row;
-        margin-top: 30px;
-        justify-content: center;
-
-        & p {
-            margin-bottom: 15px;
-        }
-    }
+    padding: 15px 0px;
 
     &__menu {
         display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: start;
-        margin-right: 30px;
-        color: #FFF;
-        font-family: Open Sans;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 18px;
-        /* 75% */
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 16px;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-bottom: 25px;
+
+        & a {
+            text-align: center;
+            flex: 0 0 calc(25% - 64px);
+            min-width: 170px;
+            line-height: 18px;
+            color: #fff;
+            font-size: 18px;
+        }
     }
 
     &__networks {
         display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: start;
-        margin-right: 30px;
-        color: #FFF;
-        font-family: Open Sans;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 18px;
-        /* 75% */
+        color: #fff;
+        max-width: fit-content;
+        margin: 0 auto;
+        margin-bottom: 25px;
+        gap: 34px;
+
+        & .social {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 15px;
+            border: 1px solid #fff;
+            border-radius: 50%;
+        }
     }
 
-    &__contacts {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        justify-content: start;
-        color: #FFF;
-        font-family: Open Sans;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 18px;
-        /* 75% */
+    &__copy {
+        margin: 0 auto;
+        max-width: fit-content;
+        color: #fff;
+        font-size: 14px;
     }
 }
