--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -2,19 +2,19 @@
     display: flex;
     flex-direction: column;
     border-radius: 30px;
-    background: #FFF;
+    background: #fff;
     width: 630px;
     height: 400px;
     justify-content: center;
     align-items: center;
     color: #498783;
+    margin: 0 auto;
 
     & h1 {
         font-size: 36px;
         font-weight: 800;
         line-height: 33px;
         margin: 0px 0px 50px;
-
     }
 
     &__inputs {
@@ -52,12 +52,11 @@
             font-size: 18px;
             color: #498783;
             padding: 6px 26px;
-            width: 260px; 
+            width: 260px;
         }
 
         &.passwd {
             display: flex;
-            
         }
 
         & p {
@@ -73,8 +72,8 @@
         width: 155px;
         height: 50px;
         border-radius: 90px;
-        background: #A4C3C1;
-        color: #FFF;
+        background: #a4c3c1;
+        color: #fff;
         font-size: 20px;
         font-style: normal;
         font-weight: 600;
