--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -2,19 +2,19 @@
     display: flex;
     flex-direction: column;
     border-radius: 30px;
-    background: #FFF;
+    background: #fff;
     width: 650px;
     height: 820px;
     justify-content: center;
     align-items: center;
     color: #498783;
+    margin: 0 auto;
 
     & h1 {
         font-size: 36px;
         font-weight: 800;
         line-height: 33px;
         margin: 40px 0px 25px;
-
     }
 }
 
@@ -31,74 +31,74 @@
         margin: 0 15px;
     }
     .checkbox {
-        display: inline-block;    
-        height: 35px;    
-        line-height: 28px;  
-        margin-right: 10px;      
+        display: inline-block;
+        height: 35px;
+        line-height: 28px;
+        margin-right: 10px;
         position: relative;
         vertical-align: middle;
         font-size: 14px;
-        user-select: none;	
+        user-select: none;
     }
     .checkbox .checkbox-switch {
-        position: relative;	
+        position: relative;
         display: inline-block;
-        box-sizing: border-box;			
-        width: 56px;	
+        box-sizing: border-box;
+        width: 56px;
         height: 28px;
         border: 1px solid #498783;
-        border-radius: 25%/50%;	
+        border-radius: 25%/50%;
         vertical-align: top;
-        background: #FFF;
-        transition: .2s;
+        background: #fff;
+        transition: 0.2s;
     }
     // переключатель
     .checkbox .checkbox-switch:before {
-        content: '';
+        content: "";
         position: absolute;
         top: 1px;
-        left: 1px;	
+        left: 1px;
         display: inline-block;
-        width: 24px;	
+        width: 24px;
         height: 24px;
         border-radius: 50%;
-        background: #A4C3C1;
+        background: #a4c3c1;
         box-shadow: 0 3px 5px #498783;
-        transition: .15s;
+        transition: 0.15s;
     }
-    .checkbox input[type=checkbox] {
-        display: block;	
+    .checkbox input[type="checkbox"] {
+        display: block;
         width: 0;
-        height: 0;	
+        height: 0;
         position: absolute;
         z-index: -1;
         opacity: 0;
     }
-    .checkbox input[type=checkbox]:not(:disabled):active + .checkbox-switch:before {
+    .checkbox input[type="checkbox"]:not(:disabled):active + .checkbox-switch:before {
         box-shadow: inset 0 0 2px #498783;
     }
-    .checkbox input[type=checkbox]:checked + .checkbox-switch {
-        background: #FFF;
+    .checkbox input[type="checkbox"]:checked + .checkbox-switch {
+        background: #fff;
     }
-    .checkbox input[type=checkbox]:checked + .checkbox-switch:before {
-        transform:translateX(28px);
+    .checkbox input[type="checkbox"]:checked + .checkbox-switch:before {
+        transform: translateX(28px);
     }
-     
+
     /* Hover */
     .checkbox input[type="checkbox"]:not(:disabled) + .checkbox-switch {
         cursor: pointer;
-        border-color:#498783;
+        border-color: #498783;
     }
-     
+
     /* Disabled */
-    .checkbox input[type=checkbox]:disabled + .checkbox-switch {
+    .checkbox input[type="checkbox"]:disabled + .checkbox-switch {
         filter: grayscale(70%);
         border-color: #498783;
     }
-    .checkbox input[type=checkbox]:disabled + .checkbox-switch:before {
+    .checkbox input[type="checkbox"]:disabled + .checkbox-switch:before {
         background: #eee;
     }
-     
+
     /* Focus */
     .checkbox.focused .checkbox-switch:before {
         box-shadow: inset 0px 0px 4px #ff5623;
@@ -114,7 +114,7 @@
         justify-content: space-between;
 
         & span {
-            color: #C95B4C;
+            color: #c95b4c;
         }
 
         & label {
@@ -134,7 +134,7 @@
             font-size: 18px;
             color: #498783;
             padding: 6px 26px;
-            width: 305px; 
+            width: 305px;
             margin-left: 20px;
         }
 
@@ -148,7 +148,7 @@
             font-size: 18px;
             color: #498783;
             padding: 6px 26px;
-            width: 305px; 
+            width: 305px;
             margin-left: 20px;
         }
     }
@@ -176,21 +176,20 @@
     &__checkbox {
         display: flex;
         align-items: center;
-        justify-content: center;
         margin-top: 20px;
         & .custom-checkbox {
             position: absolute;
             z-index: -1;
             opacity: 0;
-          }
-        
-        &  .custom-checkbox+label {
+        }
+
+        & .custom-checkbox + label {
             display: inline-flex;
             align-items: center;
             user-select: none;
-          }
-        &  .custom-checkbox+label::before {
-            content: '';
+        }
+        & .custom-checkbox + label::before {
+            content: "";
             display: inline-block;
             width: 18px;
             height: 18px;
@@ -202,32 +201,34 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-size: 50% 50%;
-          }
+        }
 
-          & .custom-checkbox:checked+label::before {
+        & .custom-checkbox:checked + label::before {
             border-color: #498783;
             background-color: #498783;
             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-          }
+        }
 
-          & label {
+        & label {
             font-size: 18px;
             font-style: normal;
             font-weight: 400;
             line-height: 31px; /* 172.222% */
-          }
+        }
     }
 
     &__btn {
+        display: block;
         width: 256px;
         height: 50px;
         border-radius: 90px;
-        background: #A4C3C1;
-        color: #FFF;
+        background: #a4c3c1;
+        color: #fff;
         font-size: 20px;
         font-style: normal;
         font-weight: 600;
         line-height: 28px; /* 140% */
+        margin: 0 auto;
         margin-top: 20px;
 
         &:hover {
@@ -236,7 +237,7 @@
         }
     }
     ::-webkit-input-placeholder {
-        color: #A4C3C1;
+        color: #a4c3c1;
         font-size: 18px;
         font-style: normal;
         font-weight: 400;
