--- a/src/components/Research/Filters/Filters.scss
+++ b/src/components/Research/Filters/Filters.scss
@@ -3,6 +3,6 @@
         display: flex;
         gap: 32px;
         justify-content: flex-end;
-        padding: 0px 65px;
+        /* padding: 0px 65px; */
     }
 }
