--- a/src/components/Research/Research.scss
+++ b/src/components/Research/Research.scss
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin: 0 93px;
+        /* margin: 0 93px; */
     }
 
     & .filters {
