--- a/src/components/Support/Success/Success.scss
+++ b/src/components/Support/Success/Success.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     color: #498783;
+    margin-left: 320px;
 
     & h1 {
         font-size: 36px;
@@ -40,7 +41,7 @@
         margin-top: 20px;
         text-align: center;
         align-items: center;
-
+        padding-top: 5px;
 
         &:hover {
             background: #498783;
